Fixed overflow for large windows

--- a/GuiStack/wwwroot/css/windows.css
+++ b/GuiStack/wwwroot/css/windows.css
@@ -13,12 +13,14 @@
     background: #FFFFFF;
     position: fixed;
     display: none;
+    overflow: auto;
     top: 50%;
     left: 50%;
     padding: 12px;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: calc(100% - 16px);
+    max-height: calc(100% - 16px);
     border-radius: 8px;
+    box-sizing: border-box;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translate(-50%, -50%) translate(0.5px, 0.5px);
